<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".fragments.DownloadFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    android:background="#f8f8fa"
    android:orientation="vertical"
   >

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="61dp">

        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/search_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:layout_marginTop="5dp"
                android:drawableRight="@drawable/ic_search"
                android:drawableTint="@color/primaryTextColor"
                android:hint="@string/search"
                android:textColorHint="@color/primaryTextColor"
                android:textSize="@dimen/edittext_text_size"/>

            <CheckBox
                android:id="@+id/cbAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/search_download"

                android:layout_marginTop="16dp"

                android:buttonTint="@color/primaryTextColor"
                android:checked="false"
                android:paddingLeft="20dp"
                android:tag="0"
                android:text="@string/all"
                android:textSize="@dimen/checkbox_text_size"/>

            <CheckBox
                android:id="@+id/cbAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbVdo"
                android:layout_marginTop="@dimen/margin_size"
                android:buttonTint="@color/primaryTextColor"

                android:checked="false"

                android:paddingLeft="20dp"
                android:tag="2"
                android:text="@string/audio"
                android:textSize="@dimen/checkbox_text_size"/>

            <CheckBox
                android:id="@+id/cbVdo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbAll"
                android:layout_marginTop="@dimen/margin_size"
                android:buttonTint="@color/primaryTextColor"

                android:checked="false"

                android:paddingLeft="20dp"
                android:tag="1"
                android:text="@string/video"
                android:textSize="@dimen/checkbox_text_size"/>

            <CheckBox
                android:id="@+id/cbGIF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbImage"
                android:layout_marginTop="@dimen/margin_size"
                android:buttonTint="@color/primaryTextColor"

                android:checked="false"

                android:paddingLeft="20dp"
                android:tag="4"
                android:text="@string/gif"
                android:textSize="@dimen/checkbox_text_size"/>

            <CheckBox
                android:id="@+id/cbImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbAudio"
                android:layout_marginTop="@dimen/margin_size"
                android:buttonTint="@color/primaryTextColor"

                android:checked="false"

                android:paddingLeft="20dp"
                android:tag="3"
                android:text="@string/image"
                android:textSize="@dimen/checkbox_text_size"/>

            <CheckBox
                android:id="@+id/cbBooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbGIF"
                android:layout_marginTop="@dimen/margin_size"
                android:buttonTint="@color/primaryTextColor"

                android:checked="false"

                android:paddingLeft="20dp"
                android:tag="5"
                android:text="@string/books"
                android:textSize="@dimen/checkbox_text_size"/>

            <CheckBox
                android:id="@+id/cbSoftware"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbBooks"
                android:layout_marginTop="@dimen/margin_size"
                android:buttonTint="@color/primaryTextColor"

                android:checked="false"

                android:paddingLeft="20dp"
                android:tag="6"
                android:text="@string/software"
                android:textSize="@dimen/checkbox_text_size"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
</ScrollView>